ore updated